Remove Tailscale installation tasks and update Docker repository architecture handling in playbook

--- a/ansible/tasks/docker.yml
+++ b/ansible/tasks/docker.yml
@@ -28,9 +28,13 @@
   args:
     creates: /etc/apt/keyrings/docker.gpg
 
+- name: Set architecture for Docker repository
+  set_fact:
+    docker_arch: "{{ 'amd64' if ansible_architecture == 'x86_64' else 'arm64' if ansible_architecture == 'aarch64' else ansible_architecture }}"
+
 - name: Add Docker repository
   apt_repository:
-    repo: "deb [arch={{ ansible_architecture }} signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
+    repo: "deb [arch={{ docker_arch }} signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
     state: present
     filename: docker
 
